refactor: jpa 변경