@@ -5,10 +5,9 @@ import com.sprint.mission.discodeit.dto.command.channel.ChannelCreatePrivateComm
 import com.sprint.mission.discodeit.dto.command.channel.ChannelUpdateCommand;
 import com.sprint.mission.discodeit.dto.command.readStatus.ReadStatusCreateCommand;
 import com.sprint.mission.discodeit.dto.response.ChannelDto;
-import com.sprint.mission.discodeit.entity.BaseEntity;
 import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.ChannelType;
 import com.sprint.mission.discodeit.entity.Message;
-import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.exception.channel.ChannelError;
 import com.sprint.mission.discodeit.exception.channel.ChannelNotFoundException;
 import com.sprint.mission.discodeit.exception.channel.ChannelUpdateFailException;
@@ -18,9 +17,12 @@ import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.ChannelService;
+import com.sprint.mission.discodeit.service.MessageService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.lang.NonNull;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
 import java.util.*;
@@ -28,123 +30,119 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class BasicChannelService implements ChannelService {
-   private final ChannelRepository channelRepository;
-   private final ReadStatusRepository readStatusRepository;
-   private final MessageRepository messageRepository;
-   private final UserRepository userRepository;
-   private final ReadStatusService readStatusService;
+    private final ChannelRepository channelRepository;
+    private final ReadStatusRepository readStatusRepository;
+    private final MessageRepository messageRepository;
+    private final UserRepository userRepository;
+    private final ReadStatusService readStatusService;
+    private final MessageService messageService;
 
 
-   @Override
-   public ChannelDto save(ChannelCreateCommand command) {
+    @Override
+    public ChannelDto save(ChannelCreateCommand command) {
 
-      Channel channel = new Channel(command);
-      channelRepository.save(channel);
+        Channel channel = new Channel(command);
+        Channel savedChannel = channelRepository.save(channel);
 
-      if(command.isPrivate() && command instanceof ChannelCreatePrivateCommand privateCommand){
-         privateCommand.participantIds()
-                 .forEach(id -> readStatusService.save(channel.getId(), new ReadStatusCreateCommand(id, Instant.now())));
-      }
+        if (command.isPrivate() && command instanceof ChannelCreatePrivateCommand privateCommand) {
 
-      return findById(channel.getId());
-   }
+            Instant now = Instant.now();
+            privateCommand.participantIds()
+                    .forEach(id -> readStatusService.save(savedChannel.getId(), new ReadStatusCreateCommand(id, now)));
+        }
 
-   @Override
-   public ChannelDto findById(UUID channelId) {
-      Channel channel = getChannelRequireThrow(channelId);
+        return ChannelDto.from(savedChannel, null);
+    }
 
-      List<UUID> userIds = channel.isPrivate() ?
-                 getReadStatusUserIds(channelId)
-                 : new ArrayList<>();
+    @Transactional(readOnly = true)
+    @Override
+    public ChannelDto findById(UUID channelId) {
+        Channel channel = getChannelRequireThrow(channelId);
 
-      Instant lastMessageAt = messageRepository.findAllByChannelId(channelId)
-              .stream()
-              .max(Comparator.comparing(BaseEntity::getCreatedAt))
-              .map(Message::getCreatedAt)
-              .orElse(null);
+        Instant lastMessageAt = getLastMessageAt(channelId);
 
-      return ChannelDto.from(channel, lastMessageAt, userIds);
-   }
+        return ChannelDto.from(channel, lastMessageAt);
+    }
 
-   @NonNull
-   private List<UUID> getReadStatusUserIds(UUID channelId) {
-      return readStatusRepository.findByChannelId(channelId)
-              .stream()
-              .map(ReadStatus::getUserId)
-              .toList();
-   }
+    @Transactional(readOnly = true)
+    @Override
+    public List<ChannelDto> findAllByUserId(UUID userId) {
+        if (!userRepository.existsById(userId)) throw new UserNotFoundException();
 
-   @Override
-   public List<ChannelDto> findAllByUserId(UUID userId) {
-      userRepository.findById(userId).orElseThrow(UserNotFoundException::new);
+        List<Channel> channels = channelRepository.findVisibleChannels(userId, ChannelType.PUBLIC);
 
-      List<UUID> channelIds = readStatusRepository.findByUserId(userId)
-            .stream()
-            .map(ReadStatus::getChannelId)
-            .toList();
+        Map<UUID, Optional<Message>> channelLatestMessages = getLatestMessagesByChannels(channels);
 
-      Map<UUID, List<UUID>> readStatusByChannelId = readStatusRepository.findAll()
-            .stream()
-            .filter(r -> channelIds.contains(r.getChannelId()))
-            .collect(Collectors.groupingBy(ReadStatus::getChannelId
-                  ,Collectors.mapping(ReadStatus::getUserId,Collectors.toList())));
+        return channels
+                .stream()
+                .map(c -> ChannelDto.from(c, getLatestMessageTimestamp(c, channelLatestMessages)))
+                .toList();
+    }
 
-      Map<UUID, Optional<Message>> channelLatestMessages = messageRepository.findAll()
-            .stream()
-            .filter(m -> channelIds.contains(m.getChannelId()))
-            .collect(Collectors.groupingBy(Message::getChannelId, Collectors.maxBy(Comparator.comparing(Message::getCreatedAt))));
+    @Transactional(readOnly = true)
+    @Override
+    public List<ChannelDto> findAll() {
+        return channelRepository.findAll().stream()
+                .map(ChannelDto::from)
+                .toList();
+    }
 
-      return channelRepository.findAll()
-            .stream()
-            .filter(c -> c.isPrivate() && channelIds.contains(c.getId()) || c.isPublic())
-            .map(c ->{
-               List<UUID> userIds = c.isPrivate() ? 
-                       readStatusByChannelId.getOrDefault(c.getId(), new ArrayList<>())
-                       :new ArrayList<>();
-               
-               Instant lastMessageAt = channelLatestMessages.getOrDefault(c.getId(), Optional.empty())
-                       .map(Message::getCreatedAt)
-                       .orElse(null);
+    @Override
+    public ChannelDto update(UUID channelId, ChannelUpdateCommand command) {
+        Channel channel = getChannelRequireThrow(channelId);
 
-               return ChannelDto.from(c, lastMessageAt, userIds);
-            })
-            .toList();
-   }
+        if (channel.isPrivate()) throw new ChannelUpdateFailException(ChannelError.PRIVATE_NOT_UPDATE.getMessage());
 
-   @Override
-   public List<ChannelDto> findAll() {
-      return channelRepository.findAll().stream()
-            .map(ChannelDto::from)
-            .toList();
-   }
+        channel.updateInfo(command);
 
-   @Override
-   public ChannelDto update(UUID channelId,  ChannelUpdateCommand command) {
-      Channel channel = getChannelRequireThrow(channelId);
+        return ChannelDto.from(channelRepository.save(channel), getLastMessageAt(channelId));
+    }
 
-      if(channel.isPrivate()) throw new ChannelUpdateFailException(ChannelError.PRIVATE_NOT_UPDATE.getMessage());
+    @Override
+    public void delete(UUID channelId) {
 
-      Channel updatedChannel = channel.updateInfo(command);
+        if (!channelRepository.existsById(channelId)) throw new ChannelNotFoundException();
 
-      channelRepository.save(updatedChannel);
+        readStatusRepository.deleteByChannel_Id(channelId);
 
-      return findById(updatedChannel.getId());
-   }
+        messageService.deleteAllByChannelId(channelId);
 
-   @Override
-   public void delete(UUID channelId) {
-      Channel channel = getChannelRequireThrow(channelId);
+        channelRepository.deleteById(channelId);
 
-      channelRepository.delete(channel.getId());
-      readStatusRepository.deleteByChannelId(channelId);
-      messageRepository.deleteAllByChannelId(channelId);
+    }
 
-   }
+    private Channel getChannelRequireThrow(UUID channelId) {
+        return channelRepository.findById(channelId)
+                .orElseThrow(ChannelNotFoundException::new);
+    }
 
-   private Channel getChannelRequireThrow(UUID channelId) {
-      return channelRepository.findById(channelId)
-            .orElseThrow(ChannelNotFoundException::new);
-   }
+    private @Nullable Instant getLastMessageAt(UUID channelId) {
+        return messageRepository.findTop1ByChannel_IdOrderByCreatedAtDesc(channelId)
+                .map(Message::getCreatedAt)
+                .orElse(null);
+    }
+
+    private @NonNull Map<UUID, Optional<Message>> getLatestMessagesByChannels(List<Channel> channels) {
+        List<UUID> channelIds = channels
+                .stream()
+                .map(Channel::getId)
+                .toList();
+
+        return messageRepository.findLatestMessagesByChannelIds(channelIds)
+                .stream()
+                .collect(
+                        Collectors.groupingBy(Message::getChannelId,
+                                Collectors.maxBy(Comparator.comparing(Message::getCreatedAt))
+                        )
+                );
+    }
+
+    private @Nullable Instant getLatestMessageTimestamp(Channel c, Map<UUID, Optional<Message>> channelLatestMessages) {
+        return channelLatestMessages.getOrDefault(c.getId(), Optional.empty())
+                .map(Message::getCreatedAt)
+                .orElse(null);
+    }
 
 }
